--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
-  "peerDependencies": {},
   "scripts": {
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
@@ -41,5 +40,8 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "p2p-chat": "^3.0.0"
+  }
 }
