--- a/package.json
+++ b/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "p2p-chat",
-  "version": "3.0.0",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "repository": {
-    "url": "https://github.com/michal-wrzosek/p2p-chat",
-    "type": "git"
+  "name": "example",
+  "version": "4.0.0",
+  "private": true,
+  "homepage": "https://michal-wrzosek.github.io/p2p-chat",
+  "dependencies": {
+    "@xstate/inspect": "^0.7.0",
+    "@xstate/react": "^3.0.0",
+    "copy-to-clipboard": "^3.3.1",
+    "js-base64": "^2.5.2",
+    "qrcode.react": "^3.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "rxjs": "^6.5.5",
+    "schemat": "^2.0.1",
+    "shortid": "^2.2.15",
+    "styled-components": "^5.1.0",
+    "xstate": "^4.32.1"
   },
-  "license": "MIT",
-  "types": "dist/index.d.ts",
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "chai": "^4.2.0",
-    "concurrently": "^5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "mocha": "^7.1.1",
-    "prettier": "^2.0.4",
-    "rollup": "^2.6.0",
-    "rollup-plugin-typescript2": "^0.27.0",
-    "ts-node": "^8.8.2",
-    "tslib": "^1.11.1",
+    "@types/jest": "^25.2.1",
+    "@types/js-base64": "^2.3.1",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/shortid": "0.0.29",
+    "@types/styled-components": "^5.0.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "gh-pages": "^2.2.0",
+    "react-app-rewired": "^2.1.5",
+    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "build": "rollup -c",
-    "build-watch": "rollup -c -w",
-    "install-all": "npm i && cd example && npm i",
-    "start-example": "cd example && npm start",
-    "deploy-example": "cd example && npm run deploy",
-    "dev": "concurrently --kill-others \"npm run build-watch\" \"npm run start-example\"",
-    "test": "mocha -r ts-node/register ./test/**/*.spec.ts",
-    "test:lint": "eslint ./src/**/*.ts ./src/**/*.tsx ./example/src/**/*.ts ./example/src/**/*.tsx",
-    "test:lint:fix": "npm run test:lint -- --fix"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-app-rewired start",
+    "build:app": "react-app-rewired build && mv -f build docs",
+    "build:clean": "rimraf ./docs",
+    "build": "npm run build:clean && npm run build:app",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   },
-  "files": [
-    "dist"
-  ],
-  "dependencies": {
-    "p2p-chat": "^3.0.0"
-  }
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
